feat: Trigger An Event when a feature flag status changes - MEED-7129 - Meeds-io/MIPs#144 (#620)
This change will allow to add a specific behavior (Cache clearing by
example) when a feature is enabled/disabled through REST API calls.